--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 homepage: "https://essentials.cheq-platform.com"
 documentation: "https://cheqessentials.zendesk.com/hc/en-us/articles/14279969610641"
 versions:
-  - sha: c883bafc78615766f969ce6c030bd7f939beaf84
-    changeNotes: LICENSE update.
+  - sha: b27552ee5c2fd5e67692f665cb8b4fa287bf78cf
+    changeNotes: update LICENSE.
